# note-server

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yml  kafka-compose.yml
bff/: Cargo.toml  config.prod.toml  config.test.toml
bff/examples/: rust_as.rs
bff/src/: app_error.rs  config.rs  lib.rs  main.rs
bff/src/data_loader/: comment_liked_loader.rs  comment_likes_count_loader.rs  mod.rs  note_collected_count_loader.rs  note_collected_loader.rs  note_comments_count_loader.rs  note_liked_loader.rs  note_likes_count_loader.rs  replies_count_loader.rs  reply_parent_loader.rs  user_followed_loader.rs  users_loader.rs
bff/src/dto/: comment.rs  note.rs  user.rs
bff/src/model/: interactive.rs
bff/src/mutation/: comment.rs  mod.rs  note.rs  user.rs
bff/src/query/: comment.rs  note.rs  user.rs
bff/src/service/: comment.rs  interactive.rs  mod.rs  note.rs  user.rs
bff/src/util/: jwt_handler.rs  mod.rs
comment/: Cargo.toml  build.rs  config.prod.toml  config.test.toml
comment/src/: lib.rs  main.rs
comment/src/abi/: mod.rs
comment/src/model/: mod.rs
comment/src/pb/: comment.rs
comment/src/repository/: mod.rs
im/: Cargo.toml
im/src/: lib.rs  main.rs
im/src/consumer/: mod.rs  user_register_consumer.rs  user_update_consumer.rs
im/src/repository/: mod.rs
interactive/: Cargo.toml  build.rs  config.prod.toml  config.test.toml
interactive/src/: lib.rs  main.rs
interactive/src/abi/: mod.rs
interactive/src/consumer/: comment_like_consumer.rs  mod.rs  note_collect_consumer.rs  note_comment_consumer.rs  note_like_consumer.rs  note_read_consumer.rs
interactive/src/model/: mod.rs
interactive/src/pb/: interactive.rs
interactive/src/repository/: mod.rs
migrations/: 20241223052512_init.sql
note/: Cargo.toml  build.rs  config.prod.toml  config.test.toml
note/src/: lib.rs  main.rs
note/src/abi/: mod.rs
note/src/model/: mod.rs
note/src/pb/: note.rs
note/src/repository/: mod.rs
protos/: comment.proto  interactive.proto  note.proto  user.proto
user/: Cargo.toml  build.rs  config.prod.toml  config.test.toml
user/src/: config.rs  error.rs  lib.rs  main.rs
user/src/abi/: mod.rs
user/src/model/: mod.rs
user/src/pb/: mod.rs  user.rs
user/src/repository/: mod.rs
webook/: Cargo.toml  config.test.toml
webook/examples/: graceful_shutdown.rs  redis_count.rs  sse.rs  vec.rs
webook/src/: lib.rs  main.rs
webook/src/data_loader/: comment_replies_loader.rs  mod.rs  note_comments_count_loader.rs  note_views_loader.rs
webook/src/dto/: comment.rs  mod.rs  note.rs  user.rs
webook/src/model/: mod.rs  note.rs  user.rs
webook/src/mutation/: comment.rs  mod.rs  note.rs  user.rs
webook/src/query/: comment.rs  mod.rs  note.rs
webook/src/service/: comment.rs  interactive.rs  mod.rs  note.rs  user.rs
webook/src/util/: message_queue.rs  mod.rs  time.rs
wrk/: note_detail.lua  note_list.lua
