[package]
name = "comment"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }
