[package]
name = "im"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
kafka = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
redis = { workspace = true }
deadpool = { workspace = true }
deadpool-redis = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
