[package]
name = "note"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kafka = { workspace = true }
toml = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }

