[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
deadpool = { workspace = true }
deadpool-redis = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lettre = { workspace = true }
redis = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
toml = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }

